--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
       <div class="home">
       <%= link_to root_path, class: "home-button" do %>
           <div class="logo">
-          <%= image_tag("circles.png", class: "circles") %>
+          <%= image_tag("logo.png", class: "circles") %>
           </div>
         <% end %>
         <h3 class="unlearning">UnLearning</h3>
