--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,9 +1,13 @@
 .form-login {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   background: white;
   padding: 10px 20px;
   margin-top: 50px;
-  border-radius: 3px;
+  border-radius: 10px;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+  width: 500px;
   h2 {
     font-size: 25px;
     font-weight: bold;
@@ -11,8 +15,28 @@
     text-align: center;
   }
   .button {
-    width: 100%;
+    width: 80%;
     margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     // color: #65C6C4;
   }
+}
+
+
+.inner-form-login {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background: white;
+  padding: 10px 20px;
+  margin-top: 50px;
+  border-radius: 10px;
+  width: 400px;
+
+}
+
+#remember {
+  color:#4F4F4F;
 }
