--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,7 +5,7 @@
   background: white;
   margin-left: auto;
   margin-right: auto;
-  border-bottom: solid #65C6C4 1px;
+  border-bottom: solid #34699a 1px;
   position: relative;
 }
 
@@ -34,10 +34,6 @@
   top: 0px
 }
 
-.circles {
-  width: 80px;
-  height: 30px;
-}
 
 
 @media (max-width: 2500px) {
@@ -55,8 +51,10 @@
 
 
   .circles {
-    width: 80px;
-    height: 30px;
+    width: 120px;
+    height: 60px;
+    margin-top: -68px;
+    margin-left: -20px;
   }
 }
 
@@ -77,9 +75,10 @@
   }
 
   .circles {
-    width: 80px;
-    height: 33px;
-    margin-top: -10px;
+    width: 90px;
+    height: 45px;
+    margin-top: -51px;
+    margin-left: -15px;
   }
 } 
 
@@ -100,7 +99,8 @@
 
   .circles {
     width: 60px;
-    height: 22px;
-
+    height: 30px;
+    margin-top: -34px;
+    margin-left: -10px;
   }
 }
