--- a/app/views/contents/advanced_search.html.erb
+++ b/app/views/contents/advanced_search.html.erb
@@ -16,7 +16,7 @@
             <div>
               <%= link_to "#", class: "home-button" do %>
               <%= content_tag(:iframe, '', src: content.content,
-                                width: 350, height: 250, frameborder: 0) %>
+                                class: "video-box", frameborder: 0) %>
               <% end %>
 
                 <div>
