--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -1,42 +1,45 @@
-<div class="index-container offset-footer">
-  <div class="w3-content">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="false" data-interval="false">
-      <div class="carousel-inner">
+
+    <div id="carouselExampleControls" class="carousel slide  offset-footer" data-ride="false" data-interval="false">
         <!-- boucle  -->
         <% @contents.each_with_index do |content, index| %>
           <div class="carousel-item <%= index == 0 ? 'active' : "" %>">
-            <div class="card-all-content">
+            <div class="card-all-content" style="border-left: 15px solid #fafafa;">
               <!-- VIDEO -->
               <% if content.format == "video"  %>
-                <div class="card-full-content">
-                  <%= content_tag(:iframe, '', src: content.content, class: "iframe-video", height: 315, frameborder: 0) %>
+                <div class="card-full-content-video">
+                  <%= content_tag(:iframe, '', src: content.content, class: "iframe-video", frameborder: 0) %>
                   <div class="card-video">
+
                     <div class="favorite-button">
-                      <p class=" card-author"><i class="far fa-id-badge"></i> <%=  content.author %> | <%=  content.published_date %> </p>
+                      <p class=" card-author" style="font-size:15px; padding-left: 50px;"><i class="far fa-id-badge"></i> <%=  content.author %> | <%=  content.published_date %> </p>
                     </div>
-                    <div class="card-text-description">
+
+                    <div class="card-text-description" id="video-card-text-description">
                       <%= content.description %>
                     </div>
-                    <hr class="blue-line">
+
                       <div class="category">
                         <button class="button"><%=  content.category %></button>
                         <%= render "/contents/favorite_button", content: content %>
                       </div>
+
                     </div>
                   </div>
                 <!-- ARTICLE -->
               <% elsif content.format == "article" %>
+              <div class="article-main">
                 <div class="card-text-title">
-                  <%= content.title %>
+                  <h2 style="padding-top: 50px; text-shadow: 1px 1px 2px #fdfffc;"><%= content.title %></h2>
                 </div>
 
                 <div class="card-article-full-content"> <!-- start -->
 
                   <div> <!-- first start -->
-                    <div class="favorite-button">
-                      <p class=" card-author"><i class="far fa-id-badge"></i> <%=  content.author %> | <%=  content.published_date %> </p>
-                    </div>
+
                     <%= image_tag content.preview_picture , class: "card-article-img-top"%>
+                    <div class="favorite-button">
+                      <p class=" card-author" style="font-size:15px; padding-left: 50px;"><i class="far fa-id-badge"></i> <%=  content.author %> | <%=  content.published_date %> </p>
+                    </div>
                   </div> <!-- first end -->
 
                   <div class="card-body-article"> <!-- second start -->
@@ -45,20 +48,19 @@
                       <%= content.description %>
                     </div>
 
-                    <hr class="blue-line">
-
                     <div class="article-content">
                       <div class="article-category">
-                        <button class="article-button"><%=  content.category %></button>
+                        <button class="article-button" style="color: white; background-color: #65C6C4; border:none; border-radius: 10px; height:40px; font-size: 20px; margin-left:10px; width: 200px"><%=  content.category %></button>
                         <span class="article-heart"><%= render "/contents/favorite_button", content: content %></span>
                       </div>
                     </div>
                   </div> <!-- second end -->
                 </div>
+                </div>
                      <!-- end -->
-                    <div class="card-article-text-content">
-                      <%= content.content.html_safe %>
-                    </div>
+                <div class="card-article-text-content">
+                  <%= content.content.html_safe %>
+                </div>
                   
                   
 
@@ -71,24 +73,22 @@
                   </div>
                   <div class="card-full-content">
                     <div class="image-container">
-                      <div class="favorite-button">
-                        <p class=" card-author"><i class="far fa-id-badge"></i> <%=  content.author %> | <%=  content.published_date %> </p>
-                      </div>
+
                       <%= image_tag content.preview_picture , class: "card-img-top"%>
+                        <p class="card-podcast-content">
+                      <%= audio_tag content.content.html_safe, controls: true %>
+                      </p>
                     </div>
                     
                     <div class="card-body-podcast">
                       <div class="card-text-description">
                         <%= content.description %>
                       </div>
-                      <hr class="blue-line">
                         <div class="category">
-                          <button class="button"><%=  content.category %></button>
+                          <button class="button" style="margin-bottom: 100px;"><%=  content.category %></button>
                           <%= render "/contents/favorite_button", content: content %>
                         </div>
-                      <p class="card-podcast-content">
-                          <%= audio_tag content.content.html_safe, controls: true %>
-                      </p>
+
                     </div>
                   </div>
               <% end %>
@@ -100,12 +100,10 @@
             </div>
           </div>
         <% end %>
-      </div>
+
     </div>
 
       <!-- Green arrow & like button -->
-</div>
-
 
 
 <% content_for(:html_title) { 'Swipe to find the best content' } %>
