--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -865,7 +865,7 @@ a {
 
 
 .article-main {
-  background-image:url("geometric.jpg");
+  background-image: image-url("geometric.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   margin-top: -50px;
