--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -76,7 +76,7 @@
 
                       <%= image_tag content.preview_picture , class: "card-img-top"%>
                         <p class="card-podcast-content">
-                      <%= audio_tag content.content.html_safe, controls: true %>
+                      <%= audio_tag content.content.html_safe, controls: true, class: "audio-box"%>
                       </p>
                     </div>
                     
