--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -173,15 +173,6 @@
 }
 
 
-.author-card {
-    margin-top: 12px;
-    color: #4F4F4F;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    font-style: italic;
-    // text-align: end;
-  }
 
 .card-bottom {
     display: flex;
@@ -191,13 +182,6 @@
     }
 }
 
-.library-container {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
-    width: 360px;
-    padding-left: 50px;
-}
 
 .blockquote {
     position: relative;
@@ -265,7 +249,18 @@
 }
 
 @media (max-width: 2500px) {
-.article-main {
+
+  .author-card {
+    margin-top: 12px;
+    color: #4F4F4F;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    font-style: italic;
+    // text-align: end;
+  }
+
+  .article-main {
   height: 90vh;
 }
 a {
@@ -404,7 +399,6 @@ a {
   .card-body-podcast {
     display: flex;
     flex-direction: column;
-  
     margin-left: -300px;
   }
   
@@ -433,13 +427,31 @@ a {
 
   }
 
+
 }
 
 
 
 
-@media (max-width: 1000px) {
+@media (max-width: 1030px) {
+  .author-card {
+    font-size: 18px;
+  }
 
+  .card-body-podcast {
+    display: none;
+  }
+  #video-card-text-description {
+    width: 90%;
+  }
+  .carousel-item {
+    .card-full-content-video {
+      height: 80vh;
+    }
+  }
+  .card-full-content-video {
+    display: block;
+  }
 
 a {
   color: #65C6C4;
@@ -555,7 +567,7 @@ a {
     padding-bottom: 20px;
     padding-left: 30px;
     padding-right: 4px;
-    width: 600px;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     text-align: start;
@@ -579,13 +591,16 @@ a {
   }
   
   .arrow-icon{
-      bottom: 60px;
+      bottom: 100px;
   }
   
   .iframe-video{
     width: 700px;
     height: 400px;
-    padding-top: 20px;
+    margin-top: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .card-podcast-content {
@@ -599,7 +614,7 @@ a {
  
 
   .card-img-top {
-    width: 700px;
+    width: 50%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -656,12 +671,25 @@ a {
     margin-top: 0px;
   }
 
-  
+  .article-button {
+    transition-duration: 0.4s;
+    border-radius: 8px;
+    font-size: 16px;
+
+    padding-inline-start: 12px;
+    padding-inline-end: 12px;
+    margin-left: 5%;
+  }
+  .article-category {
+    margin-top: 0
+  }
 }
 
 
 @media (max-width: 750px) {
-
+  .author-card {
+    font-size: 12px;
+  }
 
 
 a {
@@ -756,7 +784,9 @@ a {
   }
   
   .button-format {
-    padding-top: 20px;
+
+    margin-left: 45%;
+    width: 370px;
   }
   
   .card-text-title {
@@ -792,13 +822,17 @@ a {
   }
   
   .arrow-icon{
-      bottom: 60px;
+      bottom: 100px;
   }
   
   .iframe-video{
     width: 90%;
-    height: 200px;
-    padding-top: 20px;
+    height: 205px;
+
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-top: 20px;
   }
   
   .card-podcast-content {
