--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -546,6 +546,7 @@ a {
   
   .button-format {
     padding-top: 20px;
+    margin-left: 5%;
   }
   
   .card-text-title {
@@ -786,7 +787,7 @@ a {
   .button-format {
 
     margin-left: 45%;
-    width: 370px;
+
   }
   
   .card-text-title {
